add jl hotel info by excel

--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -72,3 +72,6 @@ spring.mvc.static-path-pattern=/static/**
 dotw.hotel.excel=E:/data/hotel_data.xlsx
 dotw.redis.list.key=hotel_info_list
 
+# JL HOTEL EXCEL
+jl.hotel.excel=E:/data/jl.xls
+
