--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.data.mongodb.repositories.enabled=true
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=500
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
@@ -80,3 +80,6 @@ spring.datasource.druid.StatViewServlet.loginPassword=123456
 #dotw.hotel.excel=/Users/toby/Develope/data.xlsb
 dotw.hotel.excel=E:/data/hotel_batch_data.xlsx
 dotw.redis.list.key=hotel_info_list
+
+# JL HOTEL EXCEL
+jl.hotel.excel=E:/data/jl.xls
