add room search method before save booking by dotw getrooms interface

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.data.mongodb.repositories.enabled=true
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=500
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
