some little change

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -27,9 +27,11 @@ spring.datasource.max-active=50
 spring.datasource.max-wait=5000
 
 # MONGODB
-spring.data.mongodb.database=yunze-hotel
-spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.database=yunze_hotel
+spring.data.mongodb.host=47.244.245.144
 spring.data.mongodb.port=27017
+spring.data.mongodb.username=yunze
+spring.data.mongodb.password=yunze@123
 spring.data.mongodb.repositories.enabled=true
 
 # JPA
