add zk and spring cloud to project

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -19,19 +19,19 @@ meituan.url=https://openplatform-hotel.meituan.com
 
 # JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-uf6fnwoj2deb9nl076o.mysql.rds.aliyuncs.com:3306/dotw?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=dotw
-spring.datasource.password=dotw@abc123
+spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=yz
+spring.datasource.password=yz@2019!
 spring.datasource.max-idle=50
 spring.datasource.max-active=50
 spring.datasource.max-wait=5000
 
 # MONGODB
-spring.data.mongodb.database=yunze_hotel
-spring.data.mongodb.host=47.244.245.144
+spring.data.mongodb.database=yz_hotel_test
+spring.data.mongodb.host=39.98.58.246
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=yunze
-spring.data.mongodb.password=yunze@123
+spring.data.mongodb.password=yunze@abc123
 spring.data.mongodb.repositories.enabled=true
 
 # JPA
@@ -50,6 +50,10 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
+
+spring.application.name=yz-hotel-api
+spring.cloud.zookeeper.connectString=127.0.0.1:2181
+spring.cloud.zookeeper.discovery.root=/yz-hotel-api-service
 
 # DRUID
 spring.datasource.druid.filters=stat,wall,log4j
