--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -5,17 +5,19 @@ server.tomcat.max-http-post-size=0
 
 # JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-uf6fnwoj2deb9nl076o.mysql.rds.aliyuncs.com:3306/dotw?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=dotw
-spring.datasource.password=dotw@abc123
+spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=yz
+spring.datasource.password=yz@2019!
 spring.datasource.max-idle=50
 spring.datasource.max-active=50
 spring.datasource.max-wait=5000
 
 # MONGODB
-spring.data.mongodb.database=yunze-hotel
-spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.database=yz_hotel_test
+spring.data.mongodb.host=39.98.58.246
 spring.data.mongodb.port=27017
+spring.data.mongodb.username=yunze
+spring.data.mongodb.password=yunze@abc123
 spring.data.mongodb.repositories.enabled=true
 
 # JPA
