--- a/hotel-job-admin/src/main/resources/application.properties
+++ b/hotel-job-admin/src/main/resources/application.properties
@@ -16,11 +16,14 @@ spring.freemarker.settings.number_format=0.##########
 ### mybatis
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
-### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://rm-uf6fnwoj2deb9nl076o.mysql.rds.aliyuncs.com:3306/dotw?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=dotw
-spring.datasource.password=dotw@abc123
+# JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=yz
+spring.datasource.password=yz@2019!
+spring.datasource.max-idle=50
+spring.datasource.max-active=50
+spring.datasource.max-wait=5000
 
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
 spring.datasource.tomcat.max-wait=10000
