finish distributed corn job method with zk and spring cloud frame

--- a/hotel-job-executor/src/main/resources/application.properties
+++ b/hotel-job-executor/src/main/resources/application.properties
@@ -23,8 +23,6 @@ xxl.job.executor.logretentiondays=-1
 
 spring.application.name=yz-hotel-job
 spring.cloud.zookeeper.discovery.register=false
-spring.cloud.zookeeper.discovery.root=yz-hotel-api
-spring.cloud.zookeeper.connect-string=127.0.0.1:2181
-spring.cloud.zookeeper.dependencies.service-zookeeper.required=true
-spring.cloud.zookeeper.dependencies.service-zookeeper.path=/yz-hotel-api-service
+spring.cloud.zookeeper.connectString=127.0.0.1:2181
+spring.cloud.zookeeper.discovery.root=/yz-hotel-api-service
 
