--- a/hotel-job-executor/pom.xml
+++ b/hotel-job-executor/pom.xml
@@ -65,6 +65,17 @@
             <version>1.2.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.36.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.corundumstudio.socketio</groupId>
+            <artifactId>netty-socketio</artifactId>
+            <version>1.7.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
