finish pull dotw hotel and room info job

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -51,6 +51,7 @@ spring.redis.pool.min-idle=0
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
 
+# SPRING CLOUND WITH ZOOKEEPER
 spring.application.name=yz-hotel-api
 spring.cloud.zookeeper.connectString=127.0.0.1:2181
 spring.cloud.zookeeper.discovery.root=/yz-hotel-api-service
