add pull room price every day timer job

--- a/hotel-core/pom.xml
+++ b/hotel-core/pom.xml
@@ -105,6 +105,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+
         <!-- spring-context -->
         <dependency>
             <groupId>org.springframework</groupId>
