finish meit order create method

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -90,3 +90,7 @@ dotw.redis.list.key=hotel_info_list
 
 # JL HOTEL EXCEL
 jl.hotel.excel=E:/data/jl.xls
+
+# SNOWFLAKE WORKER
+snowflake.workId=1
+snowflake.datacenterId=1
