--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -24,6 +24,8 @@ spring.data.mongodb.repositories.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # REDIS
 spring.redis.host=127.0.0.1
@@ -82,4 +84,6 @@ dotw.redis.list.key=hotel_info_list
 
 # JL HOTEL EXCEL
 jl.hotel.excel=E:/data/jl.xls
+
+debug=true
 
