--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -85,5 +85,8 @@ dotw.redis.list.key=hotel_info_list
 # JL HOTEL EXCEL
 jl.hotel.excel=E:/data/jl.xls
 
-debug=true
+# SNOWFLAKE WORKER
+snowflake.workId=1
+snowflake.datacenterId=1
 
+debug=true
