--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.data.mongodb.repositories.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # REDIS
 spring.redis.host=127.0.0.1
@@ -89,4 +89,4 @@ jl.hotel.excel=E:/data/jl.xls
 snowflake.workId=1
 snowflake.datacenterId=1
 
-debug=true
+#debug=true
