add excel export room price 30 days method

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -94,3 +94,6 @@ jl.hotel.excel=E:/data/jl.xls
 # SNOWFLAKE WORKER
 snowflake.workId=1
 snowflake.datacenterId=1
+
+# ROOM PRICE EXCEL
+dotw.room.price.excel=E:/data/room_price_30.xls
