add meit test api props

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 
 # DOTW LOGIN
 dotw.username=YUNZE
-dotw.password=Gss1234567
+dotw.password=Yz@2020!
 dotw.id=1706195
 dotw.url=xmldev.dotwconnect.com/gatewayV4.dotw
 
