--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # web port
-server.port=8081
-server.context-path=/api
+server.port=8082
+server.context-path=/
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
 
@@ -97,3 +97,6 @@ snowflake.datacenterId=1
 
 # ROOM PRICE EXCEL
 dotw.room.price.excel=E:/data/room_price_30.xls
+
+# MVC
+spring.mvc.static-path-pattern=/static/**
