--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -19,19 +19,19 @@ meituan.url=https://openplatform-hotel.meituan.com
 
 # JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=yz
-spring.datasource.password=yz@2019!
+spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-prod?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=yunze
+spring.datasource.password=yunze@2020!
 spring.datasource.max-idle=50
 spring.datasource.max-active=50
 spring.datasource.max-wait=5000
 
 # MONGODB
-spring.data.mongodb.database=yz_hotel_test
+spring.data.mongodb.database=yz_hotel_prod
 spring.data.mongodb.host=39.98.58.246
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=yunze
-spring.data.mongodb.password=yunze@abc123
+spring.data.mongodb.password=yunze@2020!
 spring.data.mongodb.repositories.enabled=true
 
 # JPA
