update meit cache method

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # web port
-server.port=8082
+server.port=8081
 server.context-path=/
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
@@ -8,7 +8,7 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 dotw.username=YUNZE
 dotw.password=Yz@2020!
 dotw.id=1706195
-dotw.url=xmldev.dotwconnect.com/gatewayV4.dotw
+dotw.url=us.dotwconnect.com/gatewayV4.dotw
 
 
 # Meituan config
