--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -13,12 +13,13 @@ spring.datasource.max-active=50
 spring.datasource.max-wait=5000
 
 # MONGODB
-spring.data.mongodb.database=yz_hotel_test
-spring.data.mongodb.host=39.98.58.246
-spring.data.mongodb.port=27017
-spring.data.mongodb.username=yunze
-spring.data.mongodb.password=yunze@abc123
-spring.data.mongodb.repositories.enabled=true
+#spring.data.mongodb.database=yz_hotel_prod
+#spring.data.mongodb.host=39.98.58.246
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.username=yunze
+#spring.data.mongodb.password=yunze@2020!
+#spring.data.mongodb.repositories.enabled=true
+spring.data.mongodb.uri=mongodb://yunze:yunze%40abc123@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_test?replicaSet=mgset-500240336
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
