--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -33,7 +33,8 @@ spring.datasource.max-wait=5000
 #spring.data.mongodb.username=yunze
 #spring.data.mongodb.password=yunze@2020!
 #spring.data.mongodb.repositories.enabled=true
-spring.data.mongodb.uri=mongodb://yunze:yunze%40abc123@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_test?replicaSet=mgset-500240336
+#spring.data.mongodb.uri=mongodb://yunze:yunze%40abc123@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_test?replicaSet=mgset-500240336
+spring.data.mongodb.uri=mongodb://yunze:Yz2020!@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_prod?replicaSet=mgset-500240336
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
