add connect and read time out method

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -8,7 +8,11 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 dotw.username=YUNZE
 dotw.password=Yz@2020!
 dotw.id=1706195
-dotw.url=us.dotwconnect.com/gatewayV4.dotw
+dotw.url=xmldev.dotwconnect.com/gatewayV4.dotw
+
+dotw.connect-request.time-out=500
+dotw.connect.time-out=500
+dotw.read.time-out=4000
 
 
 # Meituan config
