finish meit and dotw order mananger pages

--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -94,3 +94,9 @@ snowflake.datacenterId=1
 
 # ROOM PRICE EXCEL
 dotw.room.price.excel=E:/data/room_price_30.xls
+
+# SPRING CLOUD ZOOKEEPER
+spring.application.name=yz-hotel-admin
+spring.cloud.zookeeper.discovery.register=false
+spring.cloud.zookeeper.connectString=127.0.0.1:2181
+spring.cloud.zookeeper.discovery.root=/yz-hotel-api-service
