增加美团请求和响应不加密方法

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -110,3 +110,6 @@ dotw.room.price.excel=E:/data/room_price_30.xls
 
 # MVC
 spring.mvc.static-path-pattern=/static/**
+
+# MEIT ENCRYPT FLAG
+meit.encrypt=false
