--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -113,3 +113,12 @@ spring.mvc.static-path-pattern=/static/**
 
 # MEIT ENCRYPT FLAG
 meit.encrypt=false
+
+# JL API KEY
+jl.api.appkey=SZ28276
+jl.api.secretkey=123456
+jl.api.url=http://58.250.56.211:8081
+jl.api.test.hotelid=171813
+jl.connect-request.time-out=5000
+jl.connect.time-out=5000
+jl.read.time-out=4000
