完成美团的非加密测试验证

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -122,3 +122,6 @@ jl.api.test.hotelid=171813
 jl.connect-request.time-out=5000
 jl.connect.time-out=5000
 jl.read.time-out=4000
+
+# MEIT BOOKING
+meit.booking.prod=test
