添加捷旅的订单和静态接口的url路由

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -118,6 +118,7 @@ meit.encrypt=false
 jl.api.appkey=SZ28276
 jl.api.secretkey=123456
 jl.api.url=http://58.250.56.211:8081
+jl.order.api.url=http://58.250.56.211:8081
 jl.api.test.hotelid=171813
 jl.connect-request.time-out=5000
 jl.connect.time-out=5000
