在后管添加捷旅酒店管理页面

--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -101,3 +101,6 @@ spring.application.name=yz-hotel-admin
 spring.cloud.zookeeper.discovery.register=false
 spring.cloud.zookeeper.connectString=127.0.0.1:2181
 spring.cloud.zookeeper.discovery.root=/yz-hotel-api-service
+
+# MEIT BOOKING
+meit.booking.prod=test
