新增封装携程soap报文方法

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -126,3 +126,9 @@ jl.read.time-out=4000
 
 # MEIT BOOKING
 meit.booking.prod=test
+
+# CTRIP CONFIG
+ctrip.id=139444626
+ctrip.password=7qV5Sz
+ctrip.static.url=https://vendorctrip.fws.ctripqa.com/Hotel/OTAReceive/HotelStaticInfoService.asmx
+ctrip.partnerId=1
