完成携程静态信息方法，并完成测试用例和测试

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -130,5 +130,13 @@ meit.booking.prod=test
 # CTRIP CONFIG
 ctrip.id=139444626
 ctrip.password=7qV5Sz
-ctrip.static.url=https://vendorctrip.fws.ctripqa.com/Hotel/OTAReceive/HotelStaticInfoService.asmx
-ctrip.partnerId=1
+ctrip.static.url=https://vendor-ctrip.fws.ctripqa.com/Hotel/OTAReceive/HotelStaticInfoService.asmx
+ctrip.partnerId=1365
+ctrip.connect-request.time-out=5000
+ctrip.connect.time-out=5000
+ctrip.read.time-out=4000
+
+# DEFAULT REST CONFIG
+rest.connect-request.time-out=5000
+rest.connect.time-out=5000
+rest.read.time-out=4000
