--- a/hotel-api/pom.xml
+++ b/hotel-api/pom.xml
@@ -54,6 +54,12 @@
             <version>1.6.1</version>
         </dependency>
         <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
             <version>2.2.2</version>
