开始携程动态接口

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -136,6 +136,9 @@ ctrip.connect-request.time-out=5000
 ctrip.connect.time-out=5000
 ctrip.read.time-out=4000
 
+ctrip.auth.id=ctrip_test
+ctrip.auth.pwd=test@ctrip56&*
+
 # DEFAULT REST CONFIG
 rest.connect-request.time-out=5000
 rest.connect.time-out=5000
