--- a/hotel-api/pom.xml
+++ b/hotel-api/pom.xml
@@ -130,6 +130,15 @@
             <systemPath>${basedir}/src/main/resources/lib/mthotel-openplatform-sdk-1.0.1-JDK1.6.jar</systemPath>
         </dependency>
 
+        <!-- 加入ws服务jar包支持 -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web-services</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>wsdl4j</groupId>-->
+<!--            <artifactId>wsdl4j</artifactId>-->
+<!--        </dependency>-->
 
 
     </dependencies>
@@ -151,6 +160,30 @@
                     </execution>
                 </executions>
             </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>jaxb2-maven-plugin</artifactId>-->
+<!--                <version>2.5.0</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>xjc</id>-->
+<!--                        <goals>-->
+<!--                            <goal>xjc</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <outputDirectory>-->
+<!--                        src/main/java-->
+<!--                    </outputDirectory>-->
+<!--                    <clearOutputDir>-->
+<!--                        false-->
+<!--                    </clearOutputDir>-->
+<!--                    <packageName>com.yzly.api.webservice</packageName>-->
+<!--                    <encoding>utf-8</encoding>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
