--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -24,12 +24,12 @@ meituan.url=https://openplatform-hotel.meituan.com
 
 # JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=yz
-spring.datasource.password=yz@2019!
-#spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-prod?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-#spring.datasource.username=yunze
-#spring.datasource.password=yunze@2020!
+#spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+#spring.datasource.username=yz
+#spring.datasource.password=yz@2019!
+spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-prod?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=yunze
+spring.datasource.password=yunze@2020!
 spring.datasource.max-idle=50
 spring.datasource.max-active=50
 spring.datasource.max-wait=5000
@@ -41,8 +41,8 @@ spring.datasource.max-wait=5000
 #spring.data.mongodb.username=yunze
 #spring.data.mongodb.password=yunze@2020!
 #spring.data.mongodb.repositories.enabled=true
-spring.data.mongodb.uri=mongodb://yunze:yunze%40abc123@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_test?replicaSet=mgset-500240336
-#spring.data.mongodb.uri=mongodb://yunze:Yz2020!@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_prod?replicaSet=mgset-500240336
+#spring.data.mongodb.uri=mongodb://yunze:yunze%40abc123@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_test?replicaSet=mgset-500240336
+spring.data.mongodb.uri=mongodb://yunze:Yz2020!@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_prod?replicaSet=mgset-500240336
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -115,11 +115,11 @@ spring.mvc.static-path-pattern=/static/**
 meit.encrypt=false
 
 # JL API KEY
-jl.api.appkey=SZ28276
-jl.api.secretkey=123456
-jl.api.url=http://58.250.56.211:8081
+jl.api.appkey=JZ137357
+jl.api.secretkey=JZKJ0617
+jl.api.url=https://interface.jladmin.cn
 jl.order.api.url=http://58.250.56.211:8081
-jl.api.test.hotelid=171813
+jl.api.test.hotelid=73309
 jl.connect-request.time-out=5000
 jl.connect.time-out=5000
 jl.read.time-out=4000
