修复携程动态接口bug

--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -115,6 +115,10 @@ spring.mvc.static-path-pattern=/static/**
 meit.encrypt=false
 
 # JL API KEY
+#jl.api.appkey=SZ28276
+#jl.api.secretkey=123456
+#jl.api.url=http://58.250.56.211:8081
+#jl.order.api.url=http://58.250.56.211:8081
 jl.api.appkey=JZ137357
 jl.api.secretkey=JZKJ0617
 jl.api.url=https://interface.jladmin.cn
