--- a/hotel-admin/src/main/resources/application.properties
+++ b/hotel-admin/src/main/resources/application.properties
@@ -5,12 +5,15 @@ server.tomcat.max-http-post-size=0
 
 # JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=yz
-spring.datasource.password=yz@2019!
+#spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-test?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+#spring.datasource.username=yz
+#spring.datasource.password=yz@2019!
 spring.datasource.max-idle=50
 spring.datasource.max-active=50
 spring.datasource.max-wait=5000
+spring.datasource.url=jdbc:mysql://rm-8vbbcrxhs12c7aqp6so.mysql.zhangbei.rds.aliyuncs.com:3306/yz-hotel-prod?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=yunze
+spring.datasource.password=yunze@2020!
 
 # MONGODB
 #spring.data.mongodb.database=yz_hotel_prod
@@ -19,8 +22,8 @@ spring.datasource.max-wait=5000
 #spring.data.mongodb.username=yunze
 #spring.data.mongodb.password=yunze@2020!
 #spring.data.mongodb.repositories.enabled=true
-spring.data.mongodb.uri=mongodb://yunze:yunze%40abc123@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_test?replicaSet=mgset-500240336
-#spring.data.mongodb.uri=mongodb://yunze:Yz2020!@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_prod?replicaSet=mgset-500240336
+#spring.data.mongodb.uri=mongodb://yunze:yunze%40abc123@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_test?replicaSet=mgset-500240336
+spring.data.mongodb.uri=mongodb://yunze:Yz2020!@dds-8vbf6898e1f260b41342-pub.mongodb.zhangbei.rds.aliyuncs.com:3717,dds-8vbf6898e1f260b42433-pub.mongodb.zhangbei.rds.aliyuncs.com:3717/yz_hotel_prod?replicaSet=mgset-500240336
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
