--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -122,7 +122,7 @@ meit.encrypt=false
 jl.api.appkey=JZ137357
 jl.api.secretkey=JZKJ0617
 jl.api.url=https://interface.jladmin.cn
-jl.order.api.url=http://58.250.56.211:8081
+jl.order.api.url=https://api.jladmin.cn
 jl.api.test.hotelid=73309
 jl.connect-request.time-out=5000
 jl.connect.time-out=5000
@@ -134,7 +134,8 @@ meit.booking.prod=test
 # CTRIP CONFIG
 ctrip.id=139444626
 ctrip.password=7qV5Sz
-ctrip.static.url=https://vendor-ctrip.fws.ctripqa.com/Hotel/OTAReceive/HotelStaticInfoService.asmx
+#ctrip.static.url=https://vendor-ctrip.fws.ctripqa.com/Hotel/OTAReceive/HotelStaticInfoService.asmx
+ctrip.static.url=https://vendor.ctrip.com/Hotel/OTAReceive/HotelStaticInfoService.asmx
 ctrip.partnerId=1365
 ctrip.connect-request.time-out=5000
 ctrip.connect.time-out=5000
